# ASLtoSpeech

./: .codedocs  .gitignore  CMakeLists.txt  CMakeUserPresets.json  Doxyfile  README.md  codedocs.yml  intropage.md  requirements.txt  resources.qrc
.github/workflows/: c-cpp.yml  codacy.yml  codecov.yaml  documentation.yaml  documentation.yml  testing.yaml
PDFs/: user_testing_review.docx
app/345Application/: CMakeLists.txt  camera.cpp  camera.h  inference_classifier.py  main.cpp  resources.qrc  webcam_pattern_detection.py
app/345Application/tests/unit_tests/: camera_unit_tests.cpp
app/345Application/text_to_speech/: ttsCall.cpp  ttsCall.h
app/build-345Application-Desktop_Qt_6_5_2_MSVC2019_64bit-Debug/: CMakeCache.txt
app/build-345Application-Desktop_Qt_6_5_2_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt.prev  build.ninja  cmake_install.cmake
app/build-345Application-Desktop_x86_windows_msvc2022_pe_64bit-Debug/: .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
app/build-testingApp-Desktop_Qt_6_5_2_MinGW_64_bit-Debug/: Makefile  Makefile.Debug  Makefile.Release  ui_camera.h
app/testingApp/: camera.cpp  camera.h  camera.ui  main.cpp  testingApp.pro
coverage/: camera_test.xml  coverage1.xml  coverage_info.xml  coverage_tests.xml  generate_coverage.ps1  generate_coverage_gh.ps1  generate_coverage_tests.ps1  generate_coverage_tests_gh.ps1  index.html  merged_coverage1.xml
docs/: _r_e_a_d_m_e_8md.html  annotated.html  app_2345_application_2inference__classifier_8py.html  app_2345_application_2main_8cpp.html  app_2345_application_2text__to__speech_2tts_call_8cpp.html  app_2345_application_2text__to__speech_2tts_call_8h.html  app_2345_application_2text__to__speech_2tts_call_8h_source.html  camera_8cpp.html  camera_8h.html  camera_8h_source.html  camera__tests_8cpp.html  camera__unit__tests_8cpp.html  catch__amalgamated_8cpp.html  catch__amalgamated_8hpp.html  catch__amalgamated_8hpp_source.html  class_camera-members.html  class_camera.html  class_camera_testing-members.html  class_camera_testing.html  class_catch_1_1_approx-members.html  class_catch_1_1_approx.html  class_catch_1_1_assertion_handler-members.html  class_catch_1_1_assertion_handler.html  class_catch_1_1_assertion_result-members.html  class_catch_1_1_assertion_result.html  class_catch_1_1_automake_reporter-members.html  class_catch_1_1_automake_reporter.html  class_catch_1_1_binary_expr-members.html  class_catch_1_1_binary_expr.html  class_catch_1_1_capturer-members.html  class_catch_1_1_capturer.html  class_catch_1_1_clara_1_1_arg-members.html  class_catch_1_1_clara_1_1_arg.html  class_catch_1_1_clara_1_1_args-members.html  class_catch_1_1_clara_1_1_args.html  class_catch_1_1_clara_1_1_detail_1_1_basic_result-members.html  class_catch_1_1_clara_1_1_detail_1_1_basic_result.html  class_catch_1_1_clara_1_1_detail_1_1_composable_parser_impl-members.html  class_catch_1_1_clara_1_1_detail_1_1_composable_parser_impl.html  class_catch_1_1_clara_1_1_detail_1_1_parse_state-members.html  (+825 more)
docs/html/: index.html  md__r_e_a_d_m_e.html  pages.html
docs/latex/: annotated.tex  app_2345_application_2inference__classifier_8py.tex  app_2345_application_2main_8cpp.tex  app_2345_application_2text__to__speech_2tts_call_8cpp.tex  app_2345_application_2text__to__speech_2tts_call_8h.tex  camera_8cpp.tex  camera_8h.tex  camera__tests_8cpp.tex  camera__unit__tests_8cpp.tex  catch__amalgamated_8cpp.tex  catch__amalgamated_8hpp.tex  class_camera.eps  class_camera.tex  class_camera_testing.eps  class_camera_testing.tex  class_catch_1_1_approx.tex  class_catch_1_1_assertion_handler.tex  class_catch_1_1_assertion_result.tex  class_catch_1_1_automake_reporter.eps  class_catch_1_1_automake_reporter.tex  class_catch_1_1_binary_expr.tex  class_catch_1_1_capturer.tex  class_catch_1_1_clara_1_1_arg.eps  class_catch_1_1_clara_1_1_arg.tex  class_catch_1_1_clara_1_1_args.tex  class_catch_1_1_clara_1_1_detail_1_1_basic_result.eps  class_catch_1_1_clara_1_1_detail_1_1_basic_result.tex  class_catch_1_1_clara_1_1_detail_1_1_composable_parser_impl.eps  class_catch_1_1_clara_1_1_detail_1_1_composable_parser_impl.tex  class_catch_1_1_clara_1_1_detail_1_1_parse_state.tex  class_catch_1_1_clara_1_1_detail_1_1_parser_base.eps  class_catch_1_1_clara_1_1_detail_1_1_parser_base.tex  class_catch_1_1_clara_1_1_detail_1_1_parser_ref_impl.eps  class_catch_1_1_clara_1_1_detail_1_1_parser_ref_impl.tex  class_catch_1_1_clara_1_1_detail_1_1_result_base.eps  class_catch_1_1_clara_1_1_detail_1_1_result_base.tex  class_catch_1_1_clara_1_1_detail_1_1_result_value_base.eps  class_catch_1_1_clara_1_1_detail_1_1_result_value_base.tex  class_catch_1_1_clara_1_1_detail_1_1_result_value_base_3_01void_01_4.eps  class_catch_1_1_clara_1_1_detail_1_1_result_value_base_3_01void_01_4.tex  (+477 more)
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_13.js  classes_14.js  classes_15.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  (+141 more)
html/: md__r_e_a_d_m_e.html  pages.html
html/search/: all_0.js
img_recognition/: experiment.py  inference_classifier.py  sign_lang_model(training_process_not_included).py
img_recognition/saved/: sign_lang_cnn_sign_lang.hist  sign_lang_experiment_cnn_sign_lang.hist
resources/: helpText
src/: camera.cpp  camera.h  camera.ui  inference_classifier.py  main.cpp  shared_lib.cpp  webcam_pattern_detection.py
src/img_recognition/: experiment.py  inference_classifier.py
src/text_to_speech/: ttsCall.cpp  ttsCall.h
testing/: testing.sln
testing/testing/: Resource.h  testing.cpp  testing.rc  testing.vcxproj  testing.vcxproj.filters
tests/: camera_tests.cpp  coverage1-camera_tests.gcno  coverage1-camera_unit_tests.gcno  test.cpp
text_to_speech/: ttsCall.cpp  ttsCall.h
(+90 files in other folders)
